--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h3>GitHub Repo</h3>
             <p>Projenin kodlarına burdan ulaşabilirsiniz.</p>
             <a
-              href="https://github.com/dnzkynk/dnzkynk.github.io"
+              href="https://github.com/CelalU/Cv"
               class="btn btn-primary"
               target="_blank"
             >
